SystemUI: QS: add sensors off tile
This partially reverts commit a51ea81f4445a2fe38607bbffa427eced56937cc.

Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>

--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -114,8 +114,7 @@
 
     <!-- Tiles native to System UI. Order should match "quick_settings_tiles_default" -->
     <string name="quick_settings_tiles_stock" translatable="false">
-wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,nfc,location,dataswitch,hotspot,sync,headphonesbuddy,fpsinfo,inversion,saver,dark,work,killapp,livedisplay,reading_mode,cast,night,screenrecord,reverse,nfc,lte,sound,caffeine,heads_up,usb_tether,sleepscreen,ambient_display,aod,screenshot,hwkeys,compass,cpuinfo,smartpixels,soundsearch,mono,weather,dc_dimming,powermenu,anti_flicker,vpn,sleep_mode,powershare
-
+wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,nfc,location,dataswitch,hotspot,sync,headphonesbuddy,fpsinfo,inversion,saver,dark,work,killapp,livedisplay,reading_mode,cast,night,screenrecord,reverse,nfc,lte,sound,sensorprivacy,caffeine,heads_up,usb_tether,sleepscreen,ambient_display,aod,screenshot,hwkeys,compass,cpuinfo,smartpixels,soundsearch,mono,weather,dc_dimming,powermenu,anti_flicker,vpn,sleep_mode,powershare
     </string>
 
     <!-- The tiles to display in QuickSettings -->
