[SQUASHED] System Charging Animation [1/2]
SDB: Since ancient stone age we have been using that dot based circle animation.
     Change it to something new, something cool. Will add a few later.
     5 New Animation - Files taken from LottieFiles.com n 1 borrowed from MemeUI !!!

ChargingAnimation : change both Wired & Wiresless Charging animation [1/2]

ChargingAnimations: add a few more animations [1/2]

ChargingAnimation : bring back the default one [1/2]
Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>

--- a/packages/SystemUI/res/values/styles.xml
+++ b/packages/SystemUI/res/values/styles.xml
@@ -666,6 +666,17 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <!-- Used to style Lottie charging animations -->
+    <style name="ChargingLottieAnim" />
+
+    <style name="ChargingLottieAnim.WallpaperBackground">
+        <item name="android:textColor">@*android:color/gradient_end</item>
+    </style>
+
+    <style name="ChargingLottieAnim.DarkBackground">
+        <item name="android:textColor">@*android:color/gradient_start</item>
+    </style>
+
     <!-- Screen recording -->
     <style name="ScreenRecord" parent="Theme.SystemUI.Dialog.GlobalActions">
         <item name="android:windowIsTranslucent">true</item>
