SystemCharging:Do not use gradient color
Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>

--- a/packages/SystemUI/res/values/styles.xml
+++ b/packages/SystemUI/res/values/styles.xml
@@ -670,11 +670,11 @@
     <style name="ChargingLottieAnim" />
 
     <style name="ChargingLottieAnim.WallpaperBackground">
-        <item name="android:textColor">@*android:color/gradient_end</item>
+        <item name="android:textColor">?android:attr/colorAccent</item>
     </style>
 
     <style name="ChargingLottieAnim.DarkBackground">
-        <item name="android:textColor">@*android:color/gradient_start</item>
+        <item name="android:textColor">?android:attr/colorAccent</item>
     </style>
 
     <!-- Screen recording -->
