SystemUI: Add Weather tile based on OmniJaws client
* Initial code based on 11.0 commit https://github.com/crdroidandroid/android_frameworks_base/commit/97734230d0c1f92f5bc87ff8a515b198d92cdd15
* Removed detailed adapter - deprecated now. :(
* Simplify code and strings
* Use location as tile label when enabled
* handleClick will open settings when disabled, will open weather app when enabled
* handleLongClick will always open settings

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>

--- a/packages/SystemUI/res/values/cherish_strings.xml
+++ b/packages/SystemUI/res/values/cherish_strings.xml
@@ -243,4 +243,9 @@
         <item quantity="one">%d device connected</item>
         <item quantity="other">%d devices connected</item>
     </plurals>
+
+    <!-- Weather Tile -->
+    <string name="omnijaws_service_error">Error loading weather data</string>
+    <string name="omnijaws_service_unknown">No weather data</string>
+    <string name="omnijaws_label_default">Weather</string>
 </resources>
