BoostFramework: Guard it with overlay
Change-Id: I5e22a590b0f1f0e9a678d45d06bb262021cf84bb
Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>

--- a/core/res/res/values/cherish_config.xml
+++ b/core/res/res/values/cherish_config.xml
@@ -279,4 +279,7 @@
 	
 	<!-- Whether the device supports Smart Pixels -->
     <bool name="config_supportSmartPixels">false</bool>
+	
+	 <!-- Boost Framework -->
+    <bool name="config_supportsBoostFramework">false</bool>
 </resources>
