--- a/core/res/res/values/cherish_symbols.xml
+++ b/core/res/res/values/cherish_symbols.xml
@@ -248,4 +248,7 @@
   
    <!-- Whether the device supports Smart Pixels -->
     <java-symbol type="bool" name="config_supportSmartPixels" />
+	
+	<!-- Boost Framework -->
+    <java-symbol type="bool" name="config_supportsBoostFramework" />
 </resources>
